testsuite/tests/interpreter_errors/match_bigint/test.out
script.lkql:2:3: error: Invalid number literal for pattern
2 | | 124891249249124182481248 => true
  |   ^^^^^^^^^^^^^^^^^^^^^^^^

